--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!--代辦事項頁面-->
         <div class="todoList">
             <div class="header">
-                <div class="leftLogo"><img src="/image/logo.png" alt=""></div>
+                <div class="leftLogo"><img src="./image/logo.png" alt=""></div>
                 <div class="rightHeader">
                     <p class="rightName">XXX的代辦</p>
                     <input type="button" class="logoutBtn" value="登出">
