--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="todoListPage">
                 <div class="list">
                     <ul class="pageTop">
-                        <li class="allList">全部</li>
+                        <li class="allList active">全部</li>
                         <li class="UnFinish">待完成</li>
                         <li class="finish">已完成</li>
                     </ul>
