--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="warp">
@@ -76,7 +76,7 @@
             <div class="todoListPage">
                 <div class="list">
                     <ul class="pageTop">
-                        <li class="allList active">全部</li>
+                        <li class="allList">全部</li>
                         <li class="UnFinish">待完成</li>
                         <li class="finish">已完成</li>
                     </ul>
