--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JSfinalProj</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -76,7 +76,7 @@
             <div class="todoListPage">
                 <div class="list">
                     <ul class="pageTop">
-                        <li class="allList">全部</li>
+                        <li class="allList active">全部</li>
                         <li class="UnFinish">待完成</li>
                         <li class="finish">已完成</li>
                     </ul>
